Size of p and h2 tags change

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,10 +21,12 @@ h1 {
 h2 {
     font-family: 'Crimson Pro', serif;
     text-align: center;
+    font-size: 2rem;
 }
 
 p {
     font-family: 'Crimson Pro', serif;
+    font-size: 1rem;
 }
 
 .div-texto {
